--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 init-author-name=tyler evans
 init-author-email=tyler@tylerevans.co
-init-author-url=http://www.tylerevans.co/
+init-author-url=https://www.tylerevans.co/
 init-license=MIT
 
 @snaveevans:registry=https://npm.pkg.github.com
@@ -10,5 +10,4 @@ init-license=MIT
 
 @octanner-ui:registry=https://artifactory.octanner.net/api/npm/oct-npmjs/
 //artifactory.octanner.net/api/npm/oct-npmjs/:email=${OCT_EMAIL}
-//artifactory.octanner.net/api/npm/oct-npmjs/:always-auth=true
 //artifactory.octanner.net/api/npm/oct-npmjs/:_auth=${ARTIFACTORY_TOKEN}
