fix: bw and add synthetic api env

--- a/chezmoi.toml
+++ b/chezmoi.toml
@@ -1,5 +1,4 @@
 [hooks.read-source-state.pre]
-command = ".local/share/chezmoi/.install-password-manager.sh"
+command = "sh .local/share/chezmoi/.install-password-manager.sh"
 [bitwarden]
-unlock = "auto"
-
+unlock = false
